--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
     background-image: url("assets/bg.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    width: 100%;
     height: 100%;
 }
 
@@ -23,7 +24,7 @@ body{
     grid-template-columns: 250px 250px 250px;
     grid-template-rows: 300px 300px;
     justify-content: center;
-    background-color: #645f5f17;
+    background-color: #12111189;
     margin: 150px;
     margin-top: 40px;
 }
@@ -31,10 +32,16 @@ body{
     background-color: rgba(250, 235, 215, 0.363);
     margin: 30px;
     border-radius: 4px;
-    border: 4px solid rgb(36, 79, 143);
+    border: 7px solid rgb(36, 79, 143);
     text-align: center;
+    transition: border ,background-color;
+    transition-duration: 0.3s;
 }
-
+.container:hover{
+    border :3px solid #48bb4c ;
+    background-color: rgba(250, 235, 215, 0.772);
+    box-shadow:5px 5px 10px #367228;
+}
 .image{
     width: 80%;
     height: 50%;
